panko-compiletest/src/snapshots/panko_compiletest__scope-panko__tests__cases__execute__preprocessor__test_if_directive_expands_macros.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=scopes"
    - "--stop-after=scopes"
    - panko/tests/cases/execute/preprocessor/test_if_directive_expands_macros.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit
   (declaration puts~0 `fn(∅: ptr<char const>) -> int` ∅)
   (function-definition
      main~1 `fn() -> int`
      (compound-statement
         (expression
            (call (name puts~0 `fn(∅: ptr<char const>) -> int`)
               (string "it works")))
         (return 22))))

----- stderr -----
